# histogram_equalizer

./: .gitignore  CMakeLists.txt  Scanner.cuh  main.cu
parallel/: CMakeLists.txt  Scanner.cuh  device_props.txt  kernel_16x16.txt  kernel_20x16.txt  kernel_32x16.txt  kernel_32x24.txt  kernel_32x32.txt  main.cu
parallel/results/: results.txt  results_16.txt  results_16x16.txt  results_20x16.txt  results_32.txt  results_32x16.txt  results_32x24.txt  results_32x32.txt  results_8.txt
results_postproc/: graphs.py  results.py  results_all.csv  results_par.csv  results_par_16x16.csv  results_par_20x16.csv  results_par_32x16.csv  results_par_32x24.csv  results_par_32x32.csv  results_seq.csv
seq/: CMakeLists.txt  main.cpp
seq/results/: results.txt
